--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
-    "mongoose-bcrypt": "^1.6.0"
+    "mongoose-bcrypt": "^1.6.0",
+    "nodemailer": "^6.4.2"
   }
 }
