--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
     "mongoose-bcrypt": "^1.6.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.2"
   }
 }
