--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.8.1",
     "mongoose-bcrypt": "^1.6.0",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.2"
+    "nodemailer": "^6.4.2",
+    "request": "^2.88.2"
   }
 }
