--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,11 +17,15 @@
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoosastic": "^4.6.0",
     "mongoose": "^5.8.1",
     "mongoose-bcrypt": "^1.6.0",
     "mongoose-intl": "^3.1.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.2",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
